# sky-forge-amazon

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PRD.md  README.md  cdk.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
env_sky/: pyvenv.cfg
env_sky/Scripts/: activate  activate.bat
examples/ec2-minimal/: deploy.yaml
examples/ec2-minimal/backend/app/: handler.py  requirements.txt
examples/ec2-minimal/frontend/: app.js  config.local.js  index.html
examples/lambda-minimal/: deploy.yaml
examples/lambda-minimal/backend/api/: handler.py  requirements.txt
examples/lambda-minimal/frontend/: index.html
infra/: app.py  config_loader.py  config_schema.py  secrets_bootstrap.py
infra/stacks/: ec2_stack.py  frontend_construct.py  lambda_stack.py
scripts/: deploy.py  destroy.py  dev_server.py  set_secret.py
tests/: test_config_loader.py  test_scripts.py  test_stack_synth.py
