[project]
name = "sky-forge-amazon"
version = "0.1.0"
description = "Reusable AWS deployment template for static frontend + Python backend"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["infra", "tests", "scripts"]
exclude = ["backend/", "examples/", "env_sky/", "cdk.out/"]
# aws_cdk is typed as Any (no stubs / ignore_missing_imports). Subclassing CDK
# Stack/Construct is intentional and pervasive; mypy 2.0 is fine with this but
# the older pre-commit-pinned mypy 1.11 flags every CDK subclass as misc.
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["aws_cdk.*", "constructs.*"]
ignore_missing_imports = true

# Tests use pytest's dynamic decorators (@pytest.fixture, @pytest.mark.parametrize),
# which older mypy versions don't recognize as typed. Strict typing on the test
# bodies themselves is preserved — only the decorator check is relaxed.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

# Scripts call boto3 for services without installed stubs (cloudformation, apigateway).
# Those clients return Any; relaxing warn_return_any avoids noisy false positives
# while keeping all other strict checks active.
[[tool.mypy.overrides]]
module = "scripts.*"
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
